--- a/Atlas.Api.IntegrationTests/Atlas.Api.IntegrationTests.csproj
+++ b/Atlas.Api.IntegrationTests/Atlas.Api.IntegrationTests.csproj
@@ -13,6 +13,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.0" />
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.5" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="../Atlas.Api/Atlas.Api.csproj" />
