🛡️ Configure LocalDb for safe EF Core migrations and test DB creation

--- a/Atlas.Api/appsettings.Development.json
+++ b/Atlas.Api/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=LAPTOP-SAI7F8A5\\Sreekar;Database=AtlasHomestays_Local;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
