--- a/Atlas.Api/appsettings.Development.json
+++ b/Atlas.Api/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-SAI7F8A5\\Sreekar;Database=AtlasHomestays_Local;Trusted_Connection=True;"
+    "DefaultConnection": "Server=.;Database=AtlasHomestays;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
