feat: add guest portal models and endpoints

--- a/Atlas.Api/appsettings.json
+++ b/Atlas.Api/appsettings.json
@@ -11,5 +11,14 @@
   "AllowedHosts": "*",
   "Jwt": {
     "Key": "TemporarySecretKey12345"
+  },
+  "Storage": {
+    "PublicBaseUrl": "https://<account>.blob.core.windows.net"
+  },
+  "Cors": {
+    "AllowedOrigins": [
+      "https://guest.atlashomestays.com",
+      "https://admin.atlashomestays.com"
+    ]
   }
 }
