--- a/Atlas.Api/appsettings.json
+++ b/Atlas.Api/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:atlashomestays-sqldb.database.windows.net,1433;Initial Catalog=atlasdb;Persist Security Info=False;User ID=sqladmin;Password=Welcome01@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Server=(local)\\SQLEXPRESS;Database=atlasdb;Trusted_Connection=True;TrustServerCertificate=True;Integrated Security=SSPI"
   },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
