--- a/Atlas.Api/appsettings.Development.json
+++ b/Atlas.Api/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=atlasdb1;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=(local)\\SQLEXPRESS;Database=ata;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
