--- a/Atlas.Api/appsettings.Development.json
+++ b/Atlas.Api/appsettings.Development.json
@@ -10,5 +10,9 @@
   },
   "Jwt": {
     "Key": "TemporarySecretKey12345"
+  },
+  "Razorpay": {
+    "KeyId": "rzp_test_SBxu0MfXbn5G6b",
+    "KeySecret": "jMqG5YeVfxUUtwmKFNcciNUu"
   }
 }
