fix migration issues

--- a/Atlas.Api/.env
+++ b/Atlas.Api/.env
@@ -1,2 +1,2 @@
 # Database connection string
-ConnectionStrings__DefaultConnection=Server=(local)\\SQLEXPRESS;Database=ata;Trusted_Connection=True;TrustServerCertificate=True;
+ConnectionStrings__DefaultConnection=Server=.;Database=atlasdb-dev-latest;Trusted_Connection=True;TrustServerCertificate=True;
