--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,7 +63,7 @@ jobs:
         run: dotnet run --project Atlas.DbMigrator -- --connection "${{ env.MIGRATOR_CONNECTION }}" --check-only
 
       - name: Apply migrations
-        if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/heads/release/')
+        if: github.event_name == 'workflow_dispatch' && inputs.environment == 'dev'
         env:
           MIGRATOR_CONNECTION: ${{ github.event_name == 'workflow_dispatch' && inputs.environment == 'dev' && secrets.ATLAS_DEV_SQL_CONNECTION_STRING || secrets.ATLAS_PROD_SQL_CONNECTION_STRING }}
         run: dotnet run --project Atlas.DbMigrator -- --connection "${{ env.MIGRATOR_CONNECTION }}"
