Sanitize config secrets

--- a/Atlas.Api/appsettings.Development.example.json
+++ b/Atlas.Api/appsettings.Development.example.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "__SET_VIA_ENV_OR_AZURE__"
+    "DefaultConnection": "__SET_VIA_ENV__"
   },
   "Logging": {
     "LogLevel": {
@@ -8,8 +8,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
   "Jwt": {
-    "Key": "__SET_VIA_ENV_OR_AZURE__"
+    "Key": "__SET_VIA_ENV__"
+  },
+  "Razorpay": {
+    "KeyId": "__SET_VIA_ENV__",
+    "KeySecret": "__SET_VIA_ENV__"
   }
 }
