Add migrator connection guards

--- a/.github/workflows/dev_atlas-homes-api-dev.yml
+++ b/.github/workflows/dev_atlas-homes-api-dev.yml
@@ -56,15 +56,24 @@ jobs:
         with:
           dotnet-version: 8.0.x
 
+      - name: Validate migrator connection
+        env:
+          MIGRATOR_CONNECTION: ${{ secrets.ATLAS_DEV_SQL_CONNECTION_STRING }}
+        run: |
+          if (-not $env:MIGRATOR_CONNECTION) {
+            Write-Error "Missing database connection string. Ensure ATLAS_DEV_SQL_CONNECTION_STRING is configured."
+            exit 1
+          }
+
       - name: Check for pending migrations
         env:
-          MIGRATOR_CONNECTION: ${{ secrets.ATLAS_DEV_SQL_CONNECTION }}
-        run: dotnet run --project Atlas.DbMigrator -- --connection "${{ env.MIGRATOR_CONNECTION }}" --check-only
+          MIGRATOR_CONNECTION: ${{ secrets.ATLAS_DEV_SQL_CONNECTION_STRING }}
+        run: dotnet run --project Atlas.DbMigrator -- --connection "$env:MIGRATOR_CONNECTION" --check-only
 
       - name: Apply migrations
         env:
-          MIGRATOR_CONNECTION: ${{ secrets.ATLAS_DEV_SQL_CONNECTION }}
-        run: dotnet run --project Atlas.DbMigrator -- --connection "${{ env.MIGRATOR_CONNECTION }}"
+          MIGRATOR_CONNECTION: ${{ secrets.ATLAS_DEV_SQL_CONNECTION_STRING }}
+        run: dotnet run --project Atlas.DbMigrator -- --connection "$env:MIGRATOR_CONNECTION"
       
       - name: Login to Azure
         uses: azure/login@v2
