Align deploy app with environment

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,6 +56,8 @@ jobs:
       # Required secrets:
       # - ATLAS_DEV_SQL_CONNECTION_STRING (dev)
       # - ATLAS_PROD_SQL_CONNECTION_STRING (prod)
+      # - AZURE_WEBAPP_PUBLISH_PROFILE_DEV (dev)
+      # - AZURE_WEBAPP_PUBLISH_PROFILE_PROD (prod)
       - name: Validate migrator connection
         if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/heads/release/')
         env:
@@ -83,6 +85,6 @@ jobs:
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
-          app-name: atlas-homes-api # prod app
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          app-name: ${{ github.event_name == 'workflow_dispatch' && inputs.environment == 'dev' && 'atlas-homes-api-dev' || 'atlas-homes-api' }}
+          publish-profile: ${{ github.event_name == 'workflow_dispatch' && inputs.environment == 'dev' && secrets.AZURE_WEBAPP_PUBLISH_PROFILE_DEV || secrets.AZURE_WEBAPP_PUBLISH_PROFILE_PROD }}
           package: ./publish
