--- a/.github/workflows/dev_atlas-homes-api-dev.yml
+++ b/.github/workflows/dev_atlas-homes-api-dev.yml
@@ -47,6 +47,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: .net-app
+          path: .net-app
 
       - name: Checkout code
         uses: actions/checkout@v4
@@ -88,5 +89,5 @@ jobs:
         with:
           app-name: 'atlas-homes-api-dev' # dev app
           slot-name: 'Production'
-          package: .
+          package: .net-app
           
