--- a/.github/workflows/dev_atlas-homes-api-dev.yml
+++ b/.github/workflows/dev_atlas-homes-api-dev.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: .net-app
+          name: net-app
           path: ${{env.DOTNET_ROOT}}/myapp
 
   deploy:
@@ -46,8 +46,8 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: .net-app
-          path: .net-app
+          name: net-app
+          path: ./net-app
 
       - name: Checkout code
         uses: actions/checkout@v4
@@ -102,5 +102,5 @@ jobs:
         with:
           app-name: 'atlas-homes-api-dev' # dev app
           slot-name: 'Production'
-          package: .net-app
+          package: ./net-app
           
