--- a/Atlas.Api/appsettings.Development.example.json
+++ b/Atlas.Api/appsettings.Development.example.json
@@ -12,7 +12,7 @@
     "Key": "__SET_VIA_ENV__"
   },
   "Razorpay": {
-    "KeyId": "__SET_VIA_ENV__",
-    "KeySecret": "__SET_VIA_ENV__"
+    "KeyId": "rzp_test_SBxu0MfXbn5G6b",
+    "KeySecret": "jMqG5YeVfxUUtwmKFNcciNUu"
   }
 }
