--- a/Atlas.Api/appsettings.json
+++ b/Atlas.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "__SET_VIA_ENV_OR_AZURE__"
+    "DefaultConnection": "Server=tcp:atlashomestays-sqldb-dev.database.windows.net,1433;Initial Catalog=atlasdb;Persist Security Info=False;User ID=atlashomesdevuser;Password=Welcome01@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
