--- a/Atlas.Api.IntegrationTests/Atlas.Api.IntegrationTests.csproj
+++ b/Atlas.Api.IntegrationTests/Atlas.Api.IntegrationTests.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.5" />
     <PackageReference Include="Respawn" Version="7.0.0" />
   </ItemGroup>
   <ItemGroup>
