--- a/Atlas.Api/appsettings.Development.local.json
+++ b/Atlas.Api/appsettings.Development.local.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(local)\\SQLEXPRESS;Database=ata;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=(local)\\SQLEXPRESS;Database=atlasdb-dev;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
