--- a/Atlas.Api/appsettings.json
+++ b/Atlas.Api/appsettings.json
@@ -11,5 +11,9 @@
   "AllowedHosts": "*",
   "Jwt": {
     "Key": "__SET_VIA_ENV_OR_AZURE__"
+  },
+  "Razorpay": {
+    "KeyId": "__SET_VIA_ENV_OR_AZURE__",
+    "KeySecret": "__SET_VIA_ENV_OR_AZURE__"
   }
 }
